# mcp-rag-from-scratch

./: .gitignore  CLAUDE.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: hello.yml  test.yml
data/documents/: baseball_positions.txt  baseball_rules.txt  batting_stats.txt  episodes.txt  interview.txt  koshien.txt  npb_history.txt  ohori_sho.txt  pro_career.txt  profile.txt  salary.txt  stats.txt  training.txt
docs/: 01-setup.md  02-mcp-explained.md  03-rag-explained.md  04-code-walkthrough.md  05-tutorial.md  index.md
docs/refs/: client.md  config.md  indexer.md  server.md
src/: __init__.py
src/client/: __init__.py  main.py
src/server/: __init__.py  config.py  indexer.py  main.py
tests/: conftest.py  test_chromadb.py  test_client.py  test_indexer.py  test_integration.py  test_mcp_server.py  test_ollama_tools.py
tools/: query_chromadb.py
