[project]
name = "mcp-rag-server"
version = "0.1.0"
description = "教育目的のMCP RAGサーバー - Ollama + ChromaDB"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/client", "src/server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
